# advanced_rag

./: .gitignore  ARCHITECTURE.md  DEPLOY.md  HYBRID_PLAN.md  README.md  docker-compose.yml  pyproject.toml  run_prod.sh
src/: main.py
src/db/: models.py  session.py
src/services/: auth.py  cache.py  embeddings.py  file_parser.py  ingestion.py  logging.py  rag.py  rate_limiter.py  reranker.py  retrieval.py  vector_store.py
src/worker/: celery_app.py  tasks.py
tests/: test_pipeline.py
