[project]
name = "rag-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arq>=0.26.1",
    "bcrypt>=4.0.0",
    "fastapi>=0.128.0",
    "openai>=2.16.0",
    "psycopg2-binary>=2.9.11",
    "PyJWT>=2.8.0",
    "PyMuPDF>=1.24.0",
    "python-docx>=1.1.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.9",
    "qdrant-client>=1.16.2",
    "redis>=4.2.0,<6",
    "sqlalchemy>=2.0.46",
    "structlog>=24.0.0",
    "torch>=2.10.0",
    "transformers>=5.0.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
